crates/crb-webui-shared/src/snapshots/crb_webui_shared__auth__tests__auth_user_default.snap
---
source: crates/crb-webui-shared/src/auth.rs
expression: user
---
AuthUser {
    id: "",
    login: "",
    name: None,
    email: None,
    avatar_url: None,
}
