crates/crb-webui-shared/src/snapshots/crb_webui_shared__auth__tests__auth_user_partial_optional_fields.snap
---
source: crates/crb-webui-shared/src/auth.rs
expression: user
---
AuthUser {
    id: "2",
    login: "dev",
    name: Some(
        "Developer",
    ),
    email: None,
    avatar_url: Some(
        "https://example.com/avatar.png",
    ),
}
