crates/crb-webui-shared/src/snapshots/crb_webui_shared__auth__tests__auth_user_serde_roundtrip.snap
---
source: crates/crb-webui-shared/src/auth.rs
expression: "&orig"
---
{
  "id": "12345",
  "login": "octocat",
  "name": "Octo Cat",
  "email": "octo@example.com",
  "avatar_url": "https://avatars.example.com/u/12345"
}
